# homeassistant-hofos

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .releaserc.json  CHANGELOG.md  DOCS.md  Dockerfile  PLAN.md  README.md  config.yaml  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  repository.yaml  run.sh  turbo.json  vitest.config.ts
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release-hacs.yml  release-scraper.yml  release.yml
apps/hacs-integration/: .releaserc.json  README.md  hacs.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/hacs-integration/custom_components/hofor_water/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
apps/hacs-integration/scripts/: update_version.py
apps/hacs-integration/tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py
apps/scraper/: .releaserc.json  Dockerfile  README.md  config.yaml  package.json  run.sh  tsconfig.json  vitest.config.ts
apps/scraper/src/: fetchHoforData.test.ts  fetchHoforData.ts  influxdb.test.ts  influxdb.ts  influxdb.types.ts  main.ts  types.ts
scripts/: sync-version.ts
src/: fetchHoforData.test.ts  fetchHoforData.ts  influxdb.test.ts  influxdb.ts  influxdb.types.ts  main.ts  mqtt.test.ts  mqtt.ts  playwright.ts  scraper.test.ts  scraper.ts  types.ts
